Avoid bracket pair color list overflow

--- a/src/plugins/pillbox-menus/components/Menu.less
+++ b/src/plugins/pillbox-menus/components/Menu.less
@@ -113,6 +113,7 @@
   .dsm-settings-color-list-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
 
     .flex {
       display: flex;
@@ -125,10 +126,11 @@
     flex-direction: column;
     border-radius: 10px;
     padding: 0;
+    margin-right: 10px;
     overflow: hidden;
     border: 1px solid black;
     min-width: 100px;
-    flex-grow: 3;
+    flex-grow: 999;
 
     .dsm-settings-color-list-item-container {
       position: relative;
